# tilemap-parser

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  tilemap-parser-docs-guide.md
examples/comparison/: broadphase-naive-vs-spatial.py  collision-aabb-vs-sat.py  collision-move-modes.py  movement-naive-vs-parser.py  particle-naive-vs-cached.py  rendering-culled-vs-chunked.py  rendering-naive-vs-culled.py  spatial-cell-size-tuning.py
examples/demo/: main.py
examples/object-collision/: character-vs-polygon.py  pair-comparison.py
examples/particles/src/: full.py  main.py
examples/platformer/: requirements.txt
examples/platformer-with-slide/: settings.json
examples/platformer-with-slide/data/: recents.json
examples/platformer-with-slide/src/: game.py  settings.py
examples/platformer/src/: main.py  settings.json
examples/tiny-quest/: requirements.txt  settings.json
examples/tiny-quest/data/: filemanager_prefs.json  recents.json
examples/tiny-quest/src/: game.py  settings.py  world_context.py
src/tilemap_parser/: __init__.py
src/tilemap_parser/parser/: __init__.py  map_parse.py  node_parse.py  particle.py  tmx_converter.py
tests/: test_camera.py  test_map_object.py  test_move_grounded.py  test_object_collision.py  test_object_surfaces.py  test_particle_emitter.py  test_tile_collision.py  test_tile_layer_renderer_y_sort.py
webdocs/: UX_PLANNING_GUIDE.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vercel.json
webdocs/public/: robots.txt  sitemap.xml
webdocs/src/: App.tsx  index.css
webdocs/src/components/: Seo.tsx  (+4 more)
(+87 files in other folders)
