[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tilemap-parser"
version = "4.2.2"
description = "Standalone parser/loader for tilemap-editor JSON maps, sprite animations, and collision detection runtime."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "tilemap parser contributors" }]
dependencies = [
  "pygame-ce>=2.5",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Games/Entertainment",
  "Topic :: Software Development",
  "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://tilemap-parser.vercel.app/"
Repository = "https://github.com/FluffyBrudy/tilemap-parser"
Documentation = "https://tilemap-parser.vercel.app/"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]
include = ["tilemap_parser*"]
exclude = ["webdocs*", "tests*"]
namespaces = false
